yoshimi 2.3.3.1 M

2024-10-10 Will
bn 2361
Commented out manual search in 'home' directory.

2024-9-25 Will + Hermann
bn 2360
Included bugfixes from Hermann.
Corrected some minor doc typos.
Set bugfix release version 2.3.3.1

2024-9-23
bn 2359
Final testing and doc updates
Set release version 2.3.3

2024-9-21 Will + Hermann
bn 2358
Initial preparations for release.
BugFix: init audio/midi device names before opening the backend.
Set version as 2.3.3 rc3

2024-9-20 Will
bn 2357
BugFix: Not honouring last seen mixer panel format.
Further updates to mixer panel control.
Set version as 2.3.3 rc2

2024-9-19 Will
bn 2356
Revised panel window control, reinstating link between MasterUI
    and ConfigUI for this.

2024-9-18 Will
bn 2355
Set version as 2.3.3 rc1
Made corrections and updates to HTML user guide.
Updated /Util/ programs and notes.
Included BugFix from Hermann.

2024-9-16 Will
bn 2354
Added missing conversion for note time reporting
    (only seen when activated at build time)
    clarified Build time labels
Removed System Effects C/P buttons de-activation
Corrected history location comment in globals.h

2024-9-15 Hermann
bn 2353
Rework main() to introduce an InstanceManager.
* Instances of SynthEngine and MusicIO maintained with lifecycle state
* Start-up, GUI connection and post-boot-hook rearranged
* request to start a new instance always via command system
* remove FLTK messaging and locking, rework LV2 plugin top-level

2024-9-7 Will
bn 2352
Updated HTML User Guide images to reflect current appearance.

2024-9-5 Will
bn 2351
BugFix: mixer panel not updating with correct colours.
    MasterUI was duplicating MasterMiscUI and hadn't had
    background colours changed.
More work on high contrast theme.

2024-9-2 Will
bn 2350
Revised theme colour control, providing better bank colours.
Also started development of high contrast theme.

2024-8-25 Will
bn 2349
Most keyboard shortcuts (alt+underlined) at the first couple
    of context levels now working.