@@ -1,0 +1,9 @@
+mkdir $HOME/.local/
+mkdir $HOME/.local/share/
+mkdir $HOME/.local/share/doc/
+mkdir $HOME/.local/share/doc/yoshimi/
+mkdir $HOME/.local/share/yoshimi/
+mkdir $HOME/.local/share/yoshimi/found/
+
+cp -r doc $HOME/.local/share/doc/yoshimi/
+cp -r banks $HOME/.local/share/yoshimi/found/
