@@ -750,7 +750,7 @@
         <td>255</td>
         <td>255</td>
         <td>255</td>
-        <td>Lock given history file group against changes. This is actually stored in the yoshimi.banks file.</td>
+        <td>Lock given history file group against changes. This is actually stored in the .local 'recent' file.</td>
       </tr>
 
     </tbody>
