@@ -1,5 +1,11 @@
 yoshimi 2.3.3.1 M
 
+2024-10-1 Will
+bn 2362
+Created 'non-install_README' and 'copydocs.sh' to give
+self-builders wanting to run without installing the means
+to get docs and banks in a place Yoshimi can find them.
+
 2024-10-10 Will
 bn 2361
 Commented out manual search in 'home' directory.
